<resources>
    <string name="app_name">Pretty U</string>
    <string name="subtitle">你自己的皮肤管理专家</string>
    <string name="button_login">登录</string>
    <string name="button_register">注册</string>
    <string name="other_login">第三方登录</string>
    <string name="toolbar_icon">工具栏图标</string>
    <string name="unLogin_jump">随便看看</string>

    <!--定制推荐页-->
    <string name="add_like">加入喜欢</string>
    <string name="product_evaluation">查看评论</string>
    <string name="product_test">产品体验</string>
    <string name="product_price">参考价 </string>
    <string name="recommend">定制推荐</string>
    <string name="look_my_comment">看我怎么说</string>
    <string name="evaluation_list_title">产品体验评论</string>
    <string name="evaluation_list_user_rate">推荐指数 : </string>
    <string name="evaluation_list_user_name">昵称 : </string>


    <!--首次登录进入推荐界面的对话框-->
    <string name="dialog_first_login_message">温馨提示 ： 肌肤检测后才能为你专属定制哦！</string>
    <string name="dialog_first_login_close_button">看看自己</string>


    <!--成功通过QQ登录的界面-->
    <string name="qq_login_success_title">欢迎来看我</string>
    <string name="qq_login_name_tint">有了专属昵称，是最独特的你</string>
    <string name="qq_login_name_label">昵称</string>
    <string name="qq_login_name_edit">请输入昵称</string>
    <string name="qq_login_name_sex">性别</string>
    <string name="qq_login_name_male">我是俊男</string>
    <string name="qq_login_name_female">我是靓女</string>
    <string name="qq_login_birth">何时降临地球？</string>
    <string name="qq_login_jump">去看我</string>

    <!--我的评论界面-->
    <string name="my_comment_title">我的评论</string>
    <string name="my_comment_rating_title">产品评星</string>
    <string name="my_comment_submit">提交</string>

    <!--美丽日记-->
    <string name="diary_title">你好！逆龄肌肤，从记录做起！</string>
    <string name="diary_sub_title">我的美丽动态</string>
    <string name="skin_status">肌肤状况</string>
    <string name="play_big_data">我们一起玩转大数据探索肌肤的奥秘吧！</string>
    <string name="jump_to_look_me">看我！</string>
    <string name="my_love">我的喜欢</string>


    <string name="user_tutorial">使用教程?</string>
    <string name="generate_report">生成报告</string>
    <string name="make_pic_once">再拍一次</string>
    <string name="user_title">肌肤检测使用教程</string>
    <string name="use_pic">拍照测肤</string>
    <string name="look_for_reminder">素颜测试皮肤更准确哦~</string>
    <string name="use_carmae">相机拍摄</string>
    <string name="use_default_carm">从相册选择</string>

    <string name="please_select_pic">请选择图片</string>

    <!--报告界面-->
    <string name="report_reray">重测</string>
    <string name="report_title">肌肤报告</string>
    <string name="report_save">保存至本地</string>
    <string name="default_poetry">人面桃花笑春风！</string>
    <string name="report_total">综合</string>
    <string name="report_states">肌肤状况</string>
    <string name="report_question">问题</string>
    <string name="report_question_1">色斑程度</string>
    <string name="report_question_2">痘痘程度</string>
    <string name="report_question_3">黑眼圈程度</string>
    <string name="report_self">专属定制</string>
    <string name="report_import_diary">导入日记</string>


    <!--日记-->
    <string name="add_diary">新增日记</string>
    <string name="look_diary">查看日记</string>
    <string name="my_like_diary">我的喜欢</string>

    <string name="diary_food">饮食</string>
    <string name="diary_sport">运动</string>
    <string name="diary_other">其他</string>
    <string name="diary_other_hint">熬夜，生理期，护肤品使用都可以记录哦！</string>
    <string name="diary_mood">心情</string>
    <string name="diary_pifu">肌肤感受</string>
    <string name="diary_submit">提交</string>
    <string name="diary_normal">一般</string>
    <string name="diary_mood_good">超棒</string>
    <string name="diary_mood_bad">糟糕</string>
    <string name="diary_pifu_oil">太油</string>
    <string name="diary_pifu_dry">干燥</string>
    <string name="diary_muti_input">多行输入</string>


    <string name="default_name">你好！一起变美吧</string>
    <string name="default_time">2018/6/17</string>
    <string name="stainValue">10%</string>
    <string name="acneValue">20%</string>
    <string name="dark_circleValue">30%</string>
</resources>
