<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.Toolbar
        android:id="@+id/login_success_toolbar"
        app:contentInsetStart="0dp"
        app:contentInsetEnd="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/qq_login_success_title"
            android:textSize="32sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.v7.widget.Toolbar>

    <de.hdodenhof.circleimageview.CircleImageView
        app:border_width="2dp"
        app:border_color="#ff000000"
        android:id="@+id/qq_login_img"
        android:src="@mipmap/ic_launcher"
        android:layout_below="@id/login_success_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:layout_width="80dp"
        android:layout_height="80dp" />

    <TextView
        android:id="@+id/qq_login_name_tint"
        android:text="@string/qq_login_name_tint"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/qq_login_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/qq_login_name_layout"
        android:orientation="horizontal"
        android:layout_below="@id/qq_login_name_tint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/qq_login_name_label"
            android:text="@string/qq_login_name_label"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/qq_login_name_edit"
            android:hint="@string/qq_login_name_edit"
            android:gravity="center"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/qq_login_sex_layout"
        android:layout_below="@id/qq_login_name_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/qq_login_name_sex"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <RadioGroup
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <RadioButton
                style="@style/custom_radio_button"
                android:id="@+id/male"
                android:background="@mipmap/ic_launcher"
                android:text="@string/qq_login_name_male"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <RadioButton
                style="@style/custom_radio_button"
                android:id="@+id/female"
                android:background="@mipmap/ic_launcher"
                android:text="@string/qq_login_name_female"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/qq_login_birth_layout"
        android:layout_below="@id/qq_login_sex_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/qq_login_birth"
            android:text="@string/qq_login_birth"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/qq_login_birth_spinner"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
        </Spinner>
    </LinearLayout>
    <Button
        android:layout_below="@id/qq_login_birth_layout"
        android:layout_centerHorizontal="true"
        android:text="@string/qq_login_jump"
        android:id="@+id/qq_login_jump"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</RelativeLayout>