<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.mrwho.skindetection.modules.report.activity.ReportActivity">

        <utils.view.LucklyToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_marginBottom="@dimen/dp10">

        </utils.view.LucklyToolbar>


        <ImageView
            android:id="@+id/headerView"
            android:layout_width="@dimen/dp50"
            android:layout_height="@dimen/dp50"
            android:layout_below="@id/toolbar"
            android:layout_marginLeft="@dimen/dp10"
            android:src="@mipmap/ic_launcher"
            />


        <TextView
            android:id="@+id/userNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/headerView"
            android:layout_below="@id/toolbar"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginTop="@dimen/dp8"
            android:layout_toRightOf="@id/headerView"
            android:text="@string/default_name"/>


        <TextView
            android:id="@+id/timeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/userNameTv"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginTop="@dimen/dp10"
            android:layout_toRightOf="@id/headerView"
            android:text="@string/default_time"
            android:textSize="@dimen/text_size_10sp"/>


        <ImageView
            android:id="@+id/userImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp200"
            android:layout_below="@id/headerView"
            android:layout_marginLeft="@dimen/dp20"
            android:layout_marginRight="@dimen/dp20"
            android:layout_marginTop="@dimen/dp10"

            />


        <ImageView
            android:id="@+id/closeImg"
            android:layout_width="@dimen/dp16"
            android:layout_height="@dimen/dp16"
            android:layout_alignRight="@id/userImage"
            android:layout_alignTop="@id/userImage"
            android:layout_below="@id/headerView"
            android:layout_marginRight="@dimen/dp8"
            android:layout_marginTop="@dimen/dp8"
            android:src="@mipmap/close"/>


        <TextView
            android:id="@+id/poetryTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/userImage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp10"
            android:text="@string/default_poetry"
            android:textSize="@dimen/text_size_16sp"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/poetryTv"
            android:layout_marginLeft="@dimen/dp20"
            android:layout_marginRight="@dimen/dp20"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_total"
                android:textSize="@dimen/text_size_16sp"
                android:textStyle="bold"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/poetryTv"

                android:layout_marginTop="@dimen/dp10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/report_states"/>

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="@style/ReportStarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp20"
                    android:clickable="true"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:rating="1"
                    android:stepSize="1"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dp10"
                android:background="@color/line_color"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:text="@string/report_question"
                android:textSize="@dimen/text_size_16sp"
                android:textStyle="bold"/>


            <!--由于时间关系 就不使用列表的方式实现下方的了-->
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1">

                <TableRow android:layout_marginTop="@dimen/dp10">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/report_question_1" />

                    <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
                        android:id="@+id/progressBarOne"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp10"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/dp20"
                        android:layout_marginRight="@dimen/dp10"
                        app:rcBackgroundColor="@android:color/white"
                        app:rcMax="100"
                        app:rcProgress="20"
                        app:rcProgressColor="@color/progress_color1"
                        app:rcRadius="@dimen/dp8"
                        app:rcSecondaryProgressColor="@android:color/white">

                    </com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar>

                    <TextView
                        android:id="@+id/stainTextView"
                        android:layout_marginLeft="0dp"
                        android:layout_marginRight="0dp"
                        android:text="@string/stainValue" />


                </TableRow>

                <TableRow android:layout_marginTop="@dimen/dp10">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/report_question_2"/>

                    <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
                        android:id="@+id/progressBarTwo"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp10"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/dp20"
                        android:layout_marginRight="@dimen/dp10"
                        app:rcBackgroundColor="@android:color/white"
                        app:rcMax="100"
                        app:rcProgress="40"
                        app:rcProgressColor="@color/progress_color2"
                        app:rcRadius="@dimen/dp8"
                        app:rcSecondaryProgressColor="@android:color/white">

                    </com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar>

                    <TextView
                        android:id="@+id/acneTextView"
                        android:layout_marginLeft="0dp"
                        android:layout_marginRight="0dp"
                        android:text="@string/acneValue" />

                </TableRow>

                <TableRow
                    android:layout_marginTop="@dimen/dp10">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/report_question_3"/>

                    <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
                        android:id="@+id/progressBarThree"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp10"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/dp20"
                        android:layout_marginRight="@dimen/dp10"
                        app:rcBackgroundColor="@android:color/white"
                        app:rcMax="100"
                        app:rcProgress="60"
                        app:rcProgressColor="@color/progress_color3"
                        app:rcRadius="@dimen/dp8"
                        app:rcSecondaryProgressColor="@android:color/white">

                    </com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar>

                    <TextView
                        android:id="@+id/dark_circleTextView"
                        android:layout_marginLeft="0dp"
                        android:layout_marginRight="0dp"
                        android:text="@string/dark_circleValue" />

                </TableRow>
            </TableLayout>

            <LinearLayout
                android:id="@+id/generation_ReportLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp60"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/dp40"
                android:layout_marginRight="@dimen/dp40"
                android:gravity="center_vertical"
                android:paddingBottom="@dimen/dp5"
                android:paddingTop="@dimen/dp20"
                >

                <Button
                    android:id="@+id/reportSelf"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp40"
                    android:layout_marginRight="@dimen/dp20"
                    android:layout_weight="1"
                    android:background="@drawable/main_look_btn_back"
                    android:text="@string/report_self"
                    android:textSize="@dimen/text_size_12sp"/>

                <Button
                    android:id="@+id/importDrary"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp40"
                    android:layout_weight="1"
                    android:background="@drawable/main_look_btn_back"
                    android:text="@string/report_import_diary"
                    android:textSize="@dimen/text_size_12sp"/>
            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>
</ScrollView>