<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/diary_info_title"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_margin="8dp"
            android:id="@+id/user_img"
            android:layout_width="60dp"
            android:layout_height="60dp" />
        <TextView
            android:layout_margin="8dp"
            android:id="@+id/diary_title"
            android:gravity="center"
            android:text="@string/diary_title"
            android:layout_width="match_parent"
            android:layout_height="60dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/center_line"
        android:layout_below="@id/diary_info_title"
        android:gravity="center"
        android:text="@string/diary_sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_below="@id/center_line"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="1"
            android:text="@string/skin_status"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <Spinner
            android:overlapAnchor="false"
            android:id="@+id/chart_day"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
        </Spinner>
        <Spinner
            android:overlapAnchor="false"
            android:id="@+id/chart_class"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
        </Spinner>
    </LinearLayout>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart"
            android:layout_centerInParent="true"
            android:layout_width="300dp"
            android:layout_height="300dp">
        </com.github.mikephil.charting.charts.LineChart>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_diary"
        android:layout_margin="16dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/look_diary"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@id/add_diary"/>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/my_love"
        android:layout_margin="16dp"
        android:layout_toStartOf="@id/look_diary"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/jump_to_look_me"
        android:text="@string/jump_to_look_me"
        android:background="@drawable/main_look_btn_back"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/my_love"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>